--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,15 +49,15 @@ test = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.hatch.build.targets.wheel]
-packages = ["src/uv_build_pmt"]
-
 [tool.hatch.version]
 path = "src/uv_build_pmt/__init__.py"
 
-[tool.hatch.build]
-only-include = ["src"]
+[tool.hatch.build.targets.wheel]
 sources = ["src"]
+
+[tool.hatch.build.targets.sdist]
+only-include = ["src"]
+# sources = ["src"]
 
 [tool.hatch.envs.default]
 features = ["dev"]
